--- a/_pages/officials/auditor/bio.html
+++ b/_pages/officials/auditor/bio.html
@@ -8,7 +8,7 @@ department: Auditor
 {% for official in site.data.officials.auditor %}
 <div class="row">
   <div class="col-md-4">
-    <img src="{% asset_path HenrianneWestberg.png %}" class="img-responsive" alt="{{ page.title }} - {{ page.department }}" />
+    {% cloudinary officials {{ official.image }} alt="{{ page.title }} - {{ page.department }}" %}
     <h4 class="text-center">
       {{ page.title }}<br />
       <small>Latah County {{ page.department }}</small>
