--- a/_pages/officials/prosecutor/bio.html
+++ b/_pages/officials/prosecutor/bio.html
@@ -5,6 +5,6 @@ permalink: /prosecutor/bio/
 department: Prosecutor
 ---
 
-{% for official in site.data.officials.auditor %}
+{% for official in site.data.officials.prosecutor %}
   {% include bio.html %}
 {% endfor %}
