Updated officials bios.

--- a/_pages/officials/assessor/bio.html
+++ b/_pages/officials/assessor/bio.html
@@ -5,6 +5,6 @@ permalink: /assessor/bio/
 department: Assessor
 ---
 
-{% for official in site.data.officials.auditor %}
+{% for official in site.data.officials.assessor %}
   {% include bio.html %}
 {% endfor %}
