--- a/_pages/officials/coroner/bio.html
+++ b/_pages/officials/coroner/bio.html
@@ -6,19 +6,5 @@ department: Coroner
 ---
 
 {% for official in site.data.officials.coroner %}
-<div class="row">
-  <div class="col-md-4">
-    <img src="https://placehold.it/500x600" class="img-responsive" alt="{{ page.title }} - {{ page.department }}" />
-    <h4 class="text-center">
-      {{ page.title }}<br />
-      <small>Latah County {{ page.department }}</small>
-    </h4>
-  </div>
-
-  <div class="col-md-8">
-    <p>
-      
-    </p>
-  </div>
-</div>
+  {% include bio.html %}
 {% endfor %}
